# Practical-GLMB-Implementation

./: .gitignore  README.md  gen_truth.py  model.py  setup.cfg
Example1_synthetic/: MHT_est_tracks.pickle  config_demo.json  joint_glmb.py  plots.py
Example1_synthetic/ground_truth/X/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+60 more)
Example1_synthetic/ground_truth/track_list/: 016.txt  024.txt  045.txt  061.txt  071.txt  085.txt
Example1_synthetic/libs/: est.py  filter.py  functions.py  functions_plot.py  glmb.py  model.py
Example1_synthetic/meas/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+60 more)
Glmb/: est.py  filter.py  functions.py  functions_plot.py  glmb.py
Glmb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
