[metadata]
name = Glmb
version = attr: Glmb.__version__
description = Ads scraping and analysis tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Random Name
author_email = randomemail@gmail.com
url = https://github.com/asafroth91/Practical-GLMB-Implementation

[options]
python_requires = >= 3.8
package_dir =
    = .

packages = find:

install_requires =
    numpy>=1.22.3
    pandas>=1.4.1
    scipy
    opencv-python

[options.packages.find]
exclude =
    config

[options.extras_require]
tests =
    pytest